--- a/app/index.html
+++ b/app/index.html
@@ -154,7 +154,7 @@
               <p>It took me a long time to decipher the different titles but now I am very intentional about the one that I use, so let me break down the various roles.</p>
             </div>
             <figure class="img-push-img img-right">
-              <img src="../assets/img/ret-sketch.jpg">
+              <img src="assets/img/ret-sketch.jpg">
               <figcaption>They aint pretty, but they help my process big time.</figcaption>
             </figure>
           </div>
