--- a/app/work/jio-health.html
+++ b/app/work/jio-health.html
@@ -15,7 +15,7 @@
     <!-- Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,400i|Source+Serif+Pro:400,600" rel="stylesheet">
 
-    <script src="/assets/components/modernizr/modernizr.js"></script>
+    <script src="../assets/components/modernizr/modernizr.js"></script>
   </head>
   <body>
 
@@ -145,8 +145,8 @@
       </div>
     </footer>
 
-    <script src="/assets/components/jquery/jquery.min.js"></script>
-    <script src="/assets/js/scripts.min.js"></script>
+    <script src="../assets/components/jquery/jquery.min.js"></script>
+    <script src="../assets/js/scripts.min.js"></script>
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
     <script>
