--- a/app/work/medopad.html
+++ b/app/work/medopad.html
@@ -15,7 +15,7 @@
     <!-- Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,400i|Source+Serif+Pro:400,600" rel="stylesheet">
 
-    <script src="/assets/components/modernizr/modernizr.js"></script>
+    <script src="../assets/components/modernizr/modernizr.js"></script>
   </head>
   <body>
 
@@ -163,10 +163,10 @@
       </div>
     </footer>
 
-    <script src="/assets/components/jquery/jquery.min.js"></script>
-    <script src="/assets/js/jquery.swipebox.min.js"></script>
-    <script src="/assets/js/swiper.jquery.min.js"></script>
-    <script src="/assets/js/scripts.min.js"></script>
+    <script src="../assets/components/jquery/jquery.min.js"></script>
+    <script src="../assets/js/jquery.swipebox.min.js"></script>
+    <script src="../assets/js/swiper.jquery.min.js"></script>
+    <script src="../assets/js/scripts.min.js"></script>
 
     <script type="text/javascript">
       ;( function( $ ) {
