--- a/app/work/parkhound.html
+++ b/app/work/parkhound.html
@@ -10,7 +10,7 @@
 
     <link href="//www.google-analytics.com" rel="dns-prefetch">
     <link href="//ajax.googleapis.com" rel="dns-prefetch">
-    <link href="/assets/css/style.min.css" rel="stylesheet">
+    <link href="../assets/css/style.min.css" rel="stylesheet">
 
     <!-- Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,400i|Source+Serif+Pro:400,600" rel="stylesheet">
@@ -161,8 +161,8 @@
       </div>
     </footer>
 
-    <script src="/assets/components/jquery/jquery.min.js"></script>
-    <script src="/assets/js/scripts.min.js"></script>
+    <script src="../assets/components/jquery/jquery.min.js"></script>
+    <script src="../assets/js/scripts.min.js"></script>
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
     <script>
