--- a/app/about.html
+++ b/app/about.html
@@ -69,7 +69,7 @@
             <li>I believe in the intersection of user needs and business case. Good design not only solves a users problem, it creates a sustainable business as well.</li>
             <li>I belive in constant iteration and that design is never finished.</li>
             <li>I believe in making educated assumptions, arriving at the quickest way to test that assumption and validating the idea through talking to real users.</li>
-            <li>I beleive that design is a continual learning process. Learning about the problems users have in a given context, learning new techniques, learning new tools, continually learning.</li>
+            <li>I beleive that design is a continual learning process. Learning about the problems users face in a given context, learning new techniques, learning new tools, always learning.</li>
             <li>I'm a Product Designer who works  take their vision.</li>
             <li>I'm a Product Designer who works with founders & businesses to.</li>
           </ul>
