--- a/app/index.html
+++ b/app/index.html
@@ -50,7 +50,7 @@
     <section class="work-header home">
       <div class="container">
         <div class="work-header-heading">
-          <h1 class="heading">Hi I'm Hamish, a <a data-scroll class="highlighted" href="#productDesign">Product Designer</a> who works with founders to transform their vision from an idea into a successful product which helps their business grow.</h1>
+          <h1 class="heading">Hi I'm Hamish, a <a data-scroll class="highlighted" href="#productDesign">Product Designer</a> who works with founders to transform their vision into a product which helps their business grow.</h1>
           <a href="" class="link highlight highlight-small">Get in touch</a>
         </div>
       </div>
