--- a/app/work/jio-health.html
+++ b/app/work/jio-health.html
@@ -75,14 +75,6 @@
             <p>"We believe in life's unlimited potential and are committed to inspiring this generation to lead more healthy and enriched lives."</p>
             <cite>Raghu Rai - CEO & Founder</cite>
           </blockquote>
-        </div>
-      </div>
-      <figure class="full-bleed">
-        <img src="../assets/img/ret-old.jpg" alt="">
-        <figcaption>The new screens are a lot better.</figcaption>
-      </figure>
-      <div class="container">
-        <div class="body-copy">
           <h1 class="heading">Stunted growth</h1>
           <p>Jio has evolved several times over the past three years. Initially they were heavily tied to large Care Provider Networks, building technology solutions which allowed them to connect their physicians directly to their patient populations in order to better manage various chronic diseases.
           <p>We worked with a large Care Provider in california to develop a physician dashboard that would present information submitted by patients in real-time.</p>
@@ -100,8 +92,6 @@
           </a>
           <figcaption>Physicians could then follow up with the patient via a phone call.</figcaption>
         </figure>
-      </div>
-      <div class="container">
         <div class="body-copy">
           <p>However large institutions move slowly and Jio soon realised that in order to fulfil its vision to reach more people, it would have to break free of any established organisations and go it alone.</p>
           <div class="img-push">
@@ -114,10 +104,6 @@
               <figcaption>They aint pretty, but they help my process big time.</figcaption>
             </figure>
           </div>
-        </div>
-      </div>
-      <div class="container">
-        <div class="body-copy">
           <h1 class="heading">My Halo</h1>
           <p>In order to encourage the virality of the app and so that users could share their progress with family members and others close to them, we introduced a feature called Halo. This provided two benefits:</p>
           <ul>
@@ -126,11 +112,73 @@
           </ul>
           <p>Halo became a network of people close to you who share in your progress and encourage you to reach your goals for better health.</p>
         </div>
+        <div class="iphone-section-wrapper">
+          <figure class="iphone-section">
+            <div class="iphone">
+              <img src="../assets/img/iphone6.png" alt="" class="iphone-device">
+              <div class="iphone-screen">
+                <img src="../assets/img/jio-add-note.gif" alt="">
+              </div>
+            </div>
+            <figcaption>Users search for a park in their area, view the details and book.</figcaption>
+          </figure>
+        </div>
+        <div class="iphone-section-wrapper">
+          <figure class="iphone-section">
+            <div class="iphone">
+              <img src="../assets/img/iphone6.png" alt="" class="iphone-device">
+              <div class="swiper-container iphone-screen">
+                <div class="swiper-wrapper">
+                  <div class="swiper-slide" style="background:url('../assets/img/jio-consumer-home.jpg') no-repeat; background-size: contain;"></div>
+                  <div class="swiper-slide" style="background:url('../assets/img/jio-consumer-results.jpg') no-repeat; background-size: contain;"></div>
+                  <div class="swiper-slide" style="background:url('../assets/img/jio-consumer-profile.jpg') no-repeat; background-size: contain;"></div>
+                  <div class="swiper-slide" style="background:url('../assets/img/jio-consumer-card.jpg') no-repeat; background-size: contain;"></div>
+                  <div class="swiper-slide" style="background:url('../assets/img/jio-consumer-video.jpg') no-repeat; background-size: contain;"></div>
+                </div>
+              </div>
+            </div>
+            <figcaption>Users search for a park in their area, view the details and book.</figcaption>
+          </figure>
+        </div>
+      </div>
+      <figure class="full-bleed">
+        <img src="../assets/img/jio-dev.jpg" alt="">
+        <figcaption>All pages were designed & developed for mobile, tablet and desktop.</figcaption>
+      </figure>
+      <div class="container">
+        <div class="body-copy">
+          <h1 class="heading">Growing Pains</h1>
+          <p>With four apps out in the wild - Consumer & Physician apps on both iOS and Android - and a growing feature set on each, maintinaing design consistency between them was becoming difficult. Jio had progressed to this point over many months and some of the older features were starting to show their age.</p>
+          <p>It was time was take stock of the current situation and begin efforts to consolidate the design across the service, it was time to create a Style Guide.</p>
+          <p>There are many benefits to creating a Style Guide and I would encourage any product owner to think about this early in their evolution as it only becomes more difficult to maintain consistency as time goes on. The benefits include:</p>
+          <ul>
+            <li>Visual consistency helps make an interface less confusing to users. There is often a lot of inconsistency across apps due to the time spans in which they were developed.</li>
+            <li>It speeds up the definition of new features. By having a library of pre-designed components, you can pick and choose which existing elements can be used to make up new screens.</li>
+            <li>It speeds up development. The pre-designed components can be used by developers to prototype new features quickly without relying on completed designs to start development.</li>
+            <li>When these elements are coded in a modular way, developers can easily choose from pre-developed components to build new features.</li>
+            <li>You will eventually reach a point where very little new elements need to be designed. For any new app features, the default should be to look to the Style Guide to select components from, if the element doesnt exist then it becomes a candidate for addition to the Style Guide.</li>
+          </ul>
+        </div>
+      </div>
+      <figure class="full-bleed">
+        <img src="../assets/img/jio-style-guide.jpg" alt="">
+        <figcaption>The current state of the iOS App Style Guide.</figcaption>
+      </figure>
+      <div class="container">
+        <div class="body-copy">
+          <h1 class="heading">Designing Design</h1>
+          <p>With a growing userbase, feedback and new feature requests started to roll in from our users. As a product team we also had our own ideas about what items should come next and our sales & marketing team was gaining some great insights out in the field.</p>
+          <p>I recognised that we needed to add some more structure to the way we prioritised features for development and started to research how other companies manage product. Thankfully, companies such as <a class="link-body highlight highlight-small" href="https://www.intercom.io/" target="_blank">Intercom</a> and <a class="link-body highlight highlight-small" href="https://www.uservoice.com/" target="_blank">UserVoice</a> do a great job of documenting some of the processes they use to develop their products and I was able to distill down our own product development process for Jio.</p>
+          <p>A simple one-page brief helped us to make clearer product decisions by:</p>
+          <ul>
+            <li>Identifying if the feature was a smaller incremental change or a big game-changer which aligned with the product vision. This helped with prioritisation later.</li>
+            <li>Ensured that the team was clear <strong>why</strong> the feature was being considered. The why needed to be anchored to a user benefit and not just because an investor asked for it.. well sometimes it was because an investor asked for it.. 🙄</li>
+            <li></li>
+          </ul>
+        </div>
         <figure class="contained">
-          <a href="../assets/img/jio-patient-alerts.jpg" class="swipebox2">
-            <img src="../assets/img/jio-patient-alerts.jpg" alt="">
-          </a>
-          <figcaption>Illustrating the main Watch app flow.</figcaption>
+          <img src="../assets/img/jio-product.jpg" alt="">
+          <figcaption>Physicians could then follow up with the patient via a phone call.</figcaption>
         </figure>
       </div>
     </section>
@@ -146,7 +194,14 @@
     </footer>
 
     <script src="../assets/components/jquery/jquery.min.js"></script>
+    <script src="../assets/js/swiper.jquery.min.js"></script>
     <script src="../assets/js/scripts.min.js"></script>
+
+    <script>
+    var swiper = new Swiper('.swiper-container', {
+      spaceBetween: 20,
+    });
+    </script>
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
     <script>
