--- a/app/work/parkhound.html
+++ b/app/work/parkhound.html
@@ -15,7 +15,7 @@
     <!-- Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,400i|Source+Serif+Pro:400,600" rel="stylesheet">
 
-    <script src="/assets/components/modernizr/modernizr.js"></script>
+    <script src="../assets/components/modernizr/modernizr.js"></script>
   </head>
   <body>
 
@@ -69,29 +69,32 @@
           <h1 class="heading">Intro</h1>
           <p><a class="link-body highlight highlight-small" href="http://www.parkhound.com.au" target="_blank">Parkhound</a> is an online car parking Marketplace based in Australia where Sellers make extra cash by listing their spare parking spaces, while Buyers find cheap parking options in and around cities and suburbs. The service launched at the end of 2013 and has gained steady traction since, providing a valuable alternative to the parking crisis in Australia.</p>
         </div>
-      </div>
-      <figure class="full-bleed">
-        <img src="../assets/img/ret-old.jpg" alt="">
-        <figcaption>The existing design had some room for improvement.</figcaption>
-      </figure>
-      <div class="container">
+        <figure class="contained">
+          <img src="../assets/img/ph-fine.jpg" alt="">
+          <figcaption>Finding affordable car parking can be expensive business.</figcaption>
+        </figure>
         <div class="body-copy">
           <h1 class="heading">The Problem</h1>
-          <p>There were already other parking marketplaces in Australia and successful implementations in other countries such as JustPark in the UK. When creating any marketplace you are faced with a chicken and egg scenario whereby you need content to entice buyers while at the same time you need to attract sellers with a growing userbase of buyers looking for content.</p>
-          <p>We decided to focus on Sellers first, allowing them to create content while also testing our assumptions that Australia was ready for another carpark marketplace. We created a MVP with a simple Shopify template which allowed us to upload listings, meanwhile I designed a landing page for Parkhound to explain the proposition and direct users to the Shopify site. We also started engaging with the public through social media which is where the creation of the brand really helped us tell a story. (show initial landing page)</p>
+          <p>Parking marketplaces already existed in Australia along with successful implementations internationally such as JustPark in the UK. Competition is always a good sign because it validates that there is a market that can sustain a business.
+          <p>When creating any marketplace you are always faced with a chicken and egg scenario whereby you need content to entice buyers while at the same time needing to attract sellers with a growing userbase of buyers.</p>
+          <p>We decided to focus on Sellers first, allowing them to create content while also testing our assumptions that Australia was ready for another marketplace. We created a MVP with a simple Shopify template which allowed us to upload listings, meanwhile I designed a landing page for Parkhound to explain the proposition and direct users to the Shopify site.</p>
+          <p>We also started engaging with the public through social media and through the webiste which is where the creation of the brand really helped us tell a story. One feature we explored was a place where users could tell their own parking horror stories, providing users a way to vent their frustration while resonating with the problem we were tyring to solve.</p>
+        </div>
+        <div class="contained">
+          <img src="../assets/img/ph-horror-stories.gif" alt="">
+        </div>
+        <div class="body-copy">
           <h1 class="heading">Branding</h1>
           <p>The goal was to really stand out from the competition, to create something that was personable and that we could create a story around. The brand needed to communicate community, that we were fun and happy beacause we our parking was taken care of and that we didn’t mind having a joke at the expense of those pesky parking wardens.</p>
           <p>We also wanted to show that our service was simple, that we would do all the legwork and leave the user with one less thing to worry about.</p>
-          <p>After iterating through a number of parking related symbols, I felt that they were too generic and would be difficult to create a personality around, that’s when I conceived the idea of using man’s best friend. Always dedicated to helping his master and always keen for a hunt. This symbol helped us create some more branded terminology for our users, who we always welcome to the ‘pack’. (image of tweet sent to new followers, gif of logo progression).</p>
+          <p>After iterating through a number of parking related symbols, I felt that they were too generic and would be difficult to create a personality around, that’s when I conceived the idea of using man’s best friend. Always dedicated to helping his master and always keen for a hunt. This symbol helped us create some more branded terminology for our users, who we always welcome to the ‘pack’.</p>
         </div>
         <div class="contained">
           <img src="../assets/img/ph-tweet.png" alt="">
         </div>
-      </div>
-      <div class="container">
         <div class="body-copy">
           <h1 class="heading">Price negotiation</h1>
-          <p>From the beginning we knew that the ability to negotiate on the price of a booking would be important to Buyers. The functionality was de-scoped from earlier versions of the product for good reason, and in the interim we tried to focus on helping sellers set realistic prices for their parking spaces. We found data which gave us a good indication of parking prices based on a users postcode and were able to present this back to Sellers in the form of suggested prices when they were listing their space. (show create listing screen)</p>
+          <p>Early on we realised that the ability to negotiate on the price of a booking would be important to Buyers. The functionality was de-scoped from earlier versions of the product due to complexity, soin the interim we tried to focus on helping sellers set realistic prices for their parking spaces. We found data which gave us a good indication of parking prices based on a users postcode and were able to present this back to Sellers in the form of suggested prices when they were listing their space. (show create listing screen)</p>
           <p>Now Sellers can enable Price Negotiation through their dashboard which populates a ‘Make Offer’ button on their listing, this way Buyers who aren’t happy with the advertised price can make an offer. We provide quick options enabling the Buyer to select a percentage amount, or they can enter their own absolute figure based on the booking dates they have selected. The new feature has duel benefits, as it allows Buyers to negotiate a fairer price, while it also allows Sellers to test the market and really develop pricing which matches demand for their spaces.</p>
           <blockquote>
             <p>"You clearly researched, studied and understood our brief and delivered exactly what we asked for."</p>
@@ -100,8 +103,8 @@
         </div>
       </div>
       <figure class="full-bleed">
-        <img src="../assets/img/ret-research.jpg" alt="">
-        <figcaption>All the screens.</figcaption>
+        <img src="../assets/img/ph-responsive.jpg" alt="">
+        <figcaption>All screens were designed for mobile, tablet and desktop.</figcaption>
       </figure>
       <div class="container">
         <div class="body-copy">
@@ -115,10 +118,6 @@
               <figcaption>They aint pretty, but they help my process big time.</figcaption>
             </figure>
           </div>
-        </div>
-      </div>
-      <div class="container">
-        <div class="body-copy">
           <h1 class="heading">Mapping the streets</h1>
           <p>An exciting new feature to Parkhound is the ability to view Street Parking information in select cities, where you can look up the parking restrictions for specific parking signs ahead of time. This is an unprecedented feature which hasn’t been done anywhere else and gives users some excellent insights into when certain streets might be available to park for free, where disabled parking is located and the cost of parking at metered spots.</p>
           <p>Being a new feature, educating the user around the new capabilities was important. When the user first enables the functionality on the Search Results map, a popup with a slider is displayed showing the user how to interact with the new functionality (show screenshot of slide).</p>
@@ -127,8 +126,6 @@
           <img src="../assets/img/ph-demo-slides.jpg" alt="">
           <figcaption>Screenshot of intoduction slide.</figcaption>
         </figure>
-      </div>
-      <div class="container">
         <div class="body-copy">
           <h1 class="heading">Mapping the streets cont...</h1>
           <p>Presenting the parking information on the already crowded map was a challenge, so I designed a toggle which allows users to choose which information is overlaid on the screen and ensures that the experience is seamless whether on desktop, tablet or mobile.</p>
@@ -137,17 +134,32 @@
           <p>A lot of the bookings made through Parkhound are for longer periods of time, sometimes up to year in advance and the price of these can be quite a shock to Buyers. The founders decided to introduce Payment Plans as a means to spread the cost of a booking over individual monthly payments. This was provided as an option alongside making full payment and we wanted to be really clear with the user about the expectations of the payment plan. </p>
           <p>This proved to be a difficult design challenge as we needed to show a lot of information for each stage of the plan dynamically based on the dates of the booking and whether or not a bond was included. Presenting all of this information in an expandable table allows users to minimise the information if required, making a potentially long page easier to navigate (especially on mobile).</p>
           <h1 class="heading">Going native</h1>
-          <p>It became important early on that we had a presence in the app store and that we could provide a native Parkhound experience to our users. Because the website had been designed responsive, we were able to take a hybrid approach with the early version of the app and provide some native functionality while we developed a more robust set of api’s on the back end. This way any features that we hadn’t yet developed for iOS, we could call a web view in the app without degrading the user experience.</p>
-          <p>The app is constantly receiving updates and becoming closer to feature parity with the website. Early on the app was featured in the Australian app store and to date it has received more than 7,000 downloads, proving that this was certainly a viable approach to take.</p>
+          <p>It became important early on that we had a presence in the app store and that we could provide a native Parkhound experience to our users. Because the website had been designed to be responsive, we were able to take a hybrid approach with the early version of the app and provide some native functionality while we developed a more robust set of api’s on the back-end. This way any features that we hadn’t yet developed for iOS, we could call a web view in the app without degrading the user experience.</p>
         </div>
-      </div>
-      <div class="browser-section">
-        <div class="browser">
-          <img class="macbook" src="../assets/img/macbook.jpg" alt="">
-          <div class="browser-window">
-            <img src="../assets/img/ret-landing.jpg" alt="">
-          </div>
+        <div class="iphone-section-wrapper">
+          <figure class="iphone-section">
+            <div class="iphone">
+              <img src="../assets/img/iphone6.png" alt="" class="iphone-device">
+              <div class="swiper-container iphone-screen">
+                <div class="swiper-wrapper">
+                  <div class="swiper-slide" style="background:url('../assets/img/ph-results-list.jpg') no-repeat; background-size: contain;"></div>
+                  <div class="swiper-slide" style="background:url('../assets/img/ph-results-map.jpg') no-repeat; background-size: contain;"></div>
+                  <div class="swiper-slide" style="background:url('../assets/img/ph-listing.jpg') no-repeat; background-size: contain;"></div>
+                  <div class="swiper-slide" style="background:url('../assets/img/ph-listing-2.jpg') no-repeat; background-size: contain;"></div>
+                  <div class="swiper-slide" style="background:url('../assets/img/ph-enquiry-success.jpg') no-repeat; background-size: contain;"></div>
+                </div>
+              </div>
+            </div>
+            <figcaption>Users search for a park in their area, view the details and book.</figcaption>
+          </figure>
         </div>
+        <div class="body-copy">
+          <p>The app is constantly receiving updates and becoming closer to feature parity with the website. The app was featured in the Australian App Store and has received more than 7,000 downloads, proving that the hybrid approach was a viable option to </p>
+        </div>
+        <figure class="contained">
+          <img src="../assets/img/ph-featured.jpg" alt="">
+          <figcaption>Best New App</figcaption>
+        </figure>
       </div>
     </section>
 
@@ -162,7 +174,14 @@
     </footer>
 
     <script src="../assets/components/jquery/jquery.min.js"></script>
+    <script src="../assets/js/swiper.jquery.min.js"></script>
     <script src="../assets/js/scripts.min.js"></script>
+
+    <script>
+    var swiper = new Swiper('.swiper-container', {
+      spaceBetween: 20,
+    });
+    </script>
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
     <script>
