--- a/app/about.html
+++ b/app/about.html
@@ -50,11 +50,10 @@
       <div class="container">
         <div class="body-copy">
           <h1 class="heading">About</h1>
-          <p>I'm a Product Designer who works with founders & businesses to take their vision from a simple idea, through to a successful product which helps their business grow. I'm a Product Designer who works with founders & businesses to take their vision from a simple idea, through to a successful product which helps their business grow.</p>
+          <p>I've worked with many startups and founders just like you to bring their ideas to life. You may not have had a lot of experience building products before, thats where I can help.</p>
           <div class="img-push">
             <div class="img-push-copy">
-              <p>Back in New Zealand, the national sport is unboubtedly Rugby Union. I was brought up to love the game and lucky enough to play it from time to time.</p>
-              <p>I currently play semi-professionally for a club here in the UK called Bishops Stortford.</p>
+              <p>Being a designer means that I will always be a voice for the user and consider their perspectives first. This not only results in a product your users love but just as importantly, revenue which enables you to continue making things users love.</p>
             </div>
             <figure class="img-push-img img-right">
               <img src="assets/img/me.jpg">
@@ -64,16 +63,15 @@
         </div>
         <div class="body-copy">
           <h1 class="heading">My Values</h1>
-          <p>I'm a Product Designer who works with founders & businesses to take their vision from a simple idea, through to a successful product which helps their business grow. I'm a Product Designer who works with founders & businesses to take their vision from a simple idea, through to a successful product which helps their business grow.</p>
+          <p>I like to talk to users and business stakeholder to understand what it is that should be built. </p>
           <ul>
-            <li>I believe in the intersection of user needs and business case. Good design not only solves a users problem, it creates a sustainable business as well.</li>
-            <li>I belive in constant iteration and that design is never finished.</li>
-            <li>I believe in making educated assumptions, arriving at the quickest way to test that assumption and validating the idea through talking to real users.</li>
-            <li>I beleive that design is a continual learning process. Learning about the problems users face in a given context, learning new techniques, learning new tools, always learning.</li>
-            <li>I'm a Product Designer who works  take their vision.</li>
-            <li>I'm a Product Designer who works with founders & businesses to.</li>
+            <li>I believe in the intersection of user needs and business case. Good design not only solves a users' problem, it creates a sustainable business as well.</li>
+            <li>I believe in starting narrow first. It is a lot easier to define a solution for a narrowly defined audience, then look to broaden after gaining initial traction.</li>
+            <li>I believe in making educated assumptions, arriving at the quickest way to test that assumption then validating that idea through talking to real users.</li>
+            <li>I believe in constant iteration and that design is never finished.</li>
+            <li>I believe that true failure only manifests if you fail and dont learn anything from it.</li>
+            <li>I beleive that design is a continual learning process. Learning about the problems users face, learning new techniques to arrive at better outcomes, learning new tools to communicate design intentions, always learning.</li>
           </ul>
-          <p>I'm a Product Designer who works with founders & businesses to take their vision from a simple idea, through to a successful product which helps their business grow. I'm a Product Designer who works with founders & businesses to take their vision from a simple idea, through to a successful product which helps their business grow.</p>
           <blockquote>
             <p>"I'm a Product Designer who works with founders & businesses to take their vision from a simple idea, through to a successful product which helps their business grow."</p>
             <cite>Steve Markis - Co Founder</cite>
@@ -81,11 +79,11 @@
         </div>
         <div class="body-copy">
           <h1 class="heading">Personal</h1>
-          <p>I'm a Product Designer who works with founders & businesses to take their vision from a simple idea, through to a successful product which helps their business grow. I'm a Product Designer who works with founders & businesses to take their vision from a simple idea, through to a successful product which helps their business grow.</p>
+          <p>Originaly from New Zealand, I moved to the UK with the intention of staying for two years. Seven years later and I am happily settled in Cambridge with my wife and child on the way.</p>
           <div class="img-push">
             <div class="img-push-copy">
-              <p>Back in New Zealand, the national sport is unboubtedly Rugby Union. I was brought up to love the game and lucky enough to play it from time to time.</p>
-              <p>I currently play semi-professionally for a club here in the UK called Bishops Stortford.</p>
+              <p>Back in New Zealand, the national sport is unboubtedly Rugby Union. I was brought up to love the game and am lucky enough to play it from time to time.</p>
+              <p>I currently play semi-professionally for a club called Bishops Stortford.</p>
             </div>
             <figure class="img-push-img img-right">
               <img src="assets/img/rugby.jpg">
@@ -108,13 +106,28 @@
 
     <footer class="section">
       <div class="container">
-        <ul class="social">
-          <li><a href="/">Icon 1</a></li>
-          <li><a href="/">Icon 2</a></li>
-          <li><a href="/">Icon 3</a></li>
-        </ul>
+      <div class="copyright">
         <p>&copy; Hamish Irving 2016</p>
-        <p>Built with ☕ power by me.</p>
+      </div>
+        <ul class="social">
+          <li><a href="https://twitter.com/HamishAIrving" target="_blank">
+            <svg class="svg" version="1.1" x="0px" y="0px" width="30px" height="24.4px" viewBox="0 0 30 24.4" style="enable-background:new 0 0 30 24.4;" xml:space="preserve">
+              <path d="M30,2.9c-1.1,0.5-2.3,0.8-3.5,1c1.3-0.8,2.2-2,2.7-3.4c-1.2,0.7-2.5,1.2-3.9,1.5C24.1,0.7,22.5,0,20.8,0c-3.4,0-6.2,2.8-6.2,6.2c0,0.5,0.1,1,0.2,1.4C9.7,7.3,5.1,4.9,2.1,1.1C1.6,2,1.3,3.1,1.3,4.2c0,2.1,1.1,4,2.7,5.1C3,9.3,2,9,1.2,8.6c0,0,0,0.1,0,0.1c0,3,2.1,5.5,4.9,6c-0.5,0.1-1.1,0.2-1.6,0.2c-0.4,0-0.8,0-1.2-0.1c0.8,2.4,3.1,4.2,5.7,4.3c-2.1,1.7-4.8,2.6-7.6,2.6c-0.5,0-1,0-1.5-0.1c2.7,1.7,6,2.8,9.4,2.8c11.3,0,17.5-9.4,17.5-17.5c0-0.3,0-0.5,0-0.8C28.1,5.2,29.2,4.1,30,2.9z"/>
+            </svg>
+          </a></li>
+          <li><a href="https://www.instagram.com/hamishirving/" target="_blank">
+            <svg class="svg" version="1.1" x="0px" y="0px" width="24px" height="24px" viewBox="0 0 24 24" style="enable-background:new 0 0 24 24;" xml:space="preserve">
+            <path d="M19.3,12c0,4-3.2,7.3-7.3,7.3c-4,0-7.3-3.2-7.3-7.3c0-0.5,0-0.9,0.1-1.4H0v9.6C0,22.3,1.7,24,3.8,24h16.5
+              c2.1,0,3.8-1.7,3.8-3.8v-9.6h-4.9C19.2,11.1,19.3,11.5,19.3,12z M20.2,0H3.8C1.7,0,0,1.7,0,3.8v4.1h6.1C7.4,6,9.6,4.7,12,4.7
+              c2.4,0,4.6,1.2,5.9,3.1H24V3.8C24,1.7,22.3,0,20.2,0z M22.1,4.6c0,0.4-0.3,0.7-0.7,0.7h-2c-0.4,0-0.7-0.3-0.7-0.7v-2
+              C18.7,2.3,19,2,19.4,2h2c0.4,0,0.7,0.3,0.7,0.7V4.6z M16.5,12c0-2.5-2-4.5-4.5-4.5c-2.5,0-4.5,2-4.5,4.5s2,4.5,4.5,4.5
+              C14.5,16.5,16.5,14.5,16.5,12z"/>
+            </svg>
+          </a></li>
+        </ul>
+        <div class="about">
+          <p>Built with<span>☕</span>power by me.</p>
+        </div>
       </div>
     </footer>
 
