--- a/app/contact.html
+++ b/app/contact.html
@@ -51,17 +51,15 @@
       <div class="container">
         <div class="body-copy">
           <h1 class="heading">Contact</h1>
-          <p>In between Skype meetings and chat threads, working from home can sometimes get a little lonely. Thankfully I have a a trusty work colleague in Clover, our Miniature Schnauzer.</p>
-          <p>Clover is great at making sure I don't work too hard by getting me out of my chair - as long as it results in food or walkies.</p>
           <div class="img-push">
             <figure class="img-push-img">
               <img src="assets/img/window.jpg">
               <figcaption>It's my birthday.</figcaption>
             </figure>
             <div class="img-push-copy">
-              <p>In between Skype meetings and chat threads, working from home can sometimes get a little lonely. Thankfully I have a a trusty work colleague in Clover, our Miniature Schnauzer.</p>
-              <p>Clover is great at making sure I don't work too hard by getting me out of my chair - as long as it results in food or walkies.</p>
-              <p>This is Clover on her 2nd birthday. She got a cake with dog treats. A little bit ridiculous I know...</p>
+              <p>Think you'd like to talk? Great, you can email me <a class="link-body highlight highlight-small" href="mailto:hello@hamishirving.com">here.</a></p>
+              <p>If I'm lucky I'll be here at my favourite spot where I do my best thinking. That means I'll be able to get back to you quickly.</p>
+
             </div>
           </div>
         </div>
@@ -70,11 +68,28 @@
 
     <footer class="section">
       <div class="container">
+      <div class="copyright">
+        <p>&copy; Hamish Irving 2016</p>
+      </div>
         <ul class="social">
-          <li><a href="/">Icon 1</a></li>
-          <li><a href="/">Icon 2</a></li>
-          <li><a href="/">Icon 3</a></li>
+          <li><a href="https://twitter.com/HamishAIrving" target="_blank">
+            <svg class="svg" version="1.1" x="0px" y="0px" width="30px" height="24.4px" viewBox="0 0 30 24.4" style="enable-background:new 0 0 30 24.4;" xml:space="preserve">
+              <path d="M30,2.9c-1.1,0.5-2.3,0.8-3.5,1c1.3-0.8,2.2-2,2.7-3.4c-1.2,0.7-2.5,1.2-3.9,1.5C24.1,0.7,22.5,0,20.8,0c-3.4,0-6.2,2.8-6.2,6.2c0,0.5,0.1,1,0.2,1.4C9.7,7.3,5.1,4.9,2.1,1.1C1.6,2,1.3,3.1,1.3,4.2c0,2.1,1.1,4,2.7,5.1C3,9.3,2,9,1.2,8.6c0,0,0,0.1,0,0.1c0,3,2.1,5.5,4.9,6c-0.5,0.1-1.1,0.2-1.6,0.2c-0.4,0-0.8,0-1.2-0.1c0.8,2.4,3.1,4.2,5.7,4.3c-2.1,1.7-4.8,2.6-7.6,2.6c-0.5,0-1,0-1.5-0.1c2.7,1.7,6,2.8,9.4,2.8c11.3,0,17.5-9.4,17.5-17.5c0-0.3,0-0.5,0-0.8C28.1,5.2,29.2,4.1,30,2.9z"/>
+            </svg>
+          </a></li>
+          <li><a href="https://www.instagram.com/hamishirving/" target="_blank">
+            <svg class="svg" version="1.1" x="0px" y="0px" width="24px" height="24px" viewBox="0 0 24 24" style="enable-background:new 0 0 24 24;" xml:space="preserve">
+            <path d="M19.3,12c0,4-3.2,7.3-7.3,7.3c-4,0-7.3-3.2-7.3-7.3c0-0.5,0-0.9,0.1-1.4H0v9.6C0,22.3,1.7,24,3.8,24h16.5
+              c2.1,0,3.8-1.7,3.8-3.8v-9.6h-4.9C19.2,11.1,19.3,11.5,19.3,12z M20.2,0H3.8C1.7,0,0,1.7,0,3.8v4.1h6.1C7.4,6,9.6,4.7,12,4.7
+              c2.4,0,4.6,1.2,5.9,3.1H24V3.8C24,1.7,22.3,0,20.2,0z M22.1,4.6c0,0.4-0.3,0.7-0.7,0.7h-2c-0.4,0-0.7-0.3-0.7-0.7v-2
+              C18.7,2.3,19,2,19.4,2h2c0.4,0,0.7,0.3,0.7,0.7V4.6z M16.5,12c0-2.5-2-4.5-4.5-4.5c-2.5,0-4.5,2-4.5,4.5s2,4.5,4.5,4.5
+              C14.5,16.5,16.5,14.5,16.5,12z"/>
+            </svg>
+          </a></li>
         </ul>
+        <div class="about">
+          <p>Built with<span>☕</span>power by me.</p>
+        </div>
       </div>
     </footer>
 
